Refactor security, authentication, and JWT configuration while introducing modern DTOs and improved APIs
Streamline `SecurityConfig` with enhanced headers, AntPath matchers, and pre-condition validation for modern Spring updates. Refactor `AuthController` and JWT utilities for cleaner authentication flows, error handling, and token usage. Adopt Java records for DTOs, enhancing immutability and readability while cleaning up legacy boilerplate code.